Removed JS Min Files

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <meta name="DC.language" content="de,en" />
         <meta name="DC.subject" content="Password Generator" />
         <meta name="DC.description" content="Create Random Passwords" />
-        <meta name="DC.publisher" content="Marcel Beck" /> 
+        <meta name="DC.publisher" content="Marcel Beck" />
         <meta name="DC.rights" content="Copyright 2010 by Marcel Beck" />
 
         <meta name="description" content="Online Password Generator" />
@@ -24,14 +24,14 @@
         <link rel="stylesheet" type="text/css" href="css/default.css" />
 
         <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-        <script type="text/javascript" src="js/jquery.password.min.js"></script>
-        <script type="text/javascript" src="js/pwgen.min.js"></script>
+        <script type="text/javascript" src="js/jquery.password.js"></script>
+        <script type="text/javascript" src="js/pwgen.js"></script>
 
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-7966905-2']);
             _gaq.push(['_trackPageview']);
-   
+
             (function() {
                 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
                 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
