--- a/public/index.html
+++ b/public/index.html
@@ -127,14 +127,14 @@
                 &copy; 2010 by <strong><a href="http://mbeck.org" onclick="window.open(this.href,'_blank'); return false;">Marcel Beck</a></strong>
 
                 <ul>
-                    <li><a href="http://hashgen.org" onclick="window.open(this.href,'_blank'); return false;">hashgen.org</a></li>
+                    <li><a href="http://hashgen.mbeck.org" onclick="window.open(this.href,'_blank'); return false;">hashgen.org</a></li>
                 </ul>
 
                 <div class="clear"></div>
             </div>
         </div>
         <div id="likeit">
-            <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fpwgen.org&amp;layout=button_count&amp;show_faces=true&amp;width=100&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
+            <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fpwgen.mbeck.org&amp;layout=button_count&amp;show_faces=true&amp;width=100&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
         </div>
 
     </body>
